--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pretty": "pretty-quick"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.20.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
