--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pretty": "pretty-quick"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
