--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@tailwindcss/vite": "^4.0.0",
-    "tailwindcss": "^4.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/chrome": "^0.0.315",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@wxt-dev/module-react": "^1.1.3",
     "prettier": "^3.4.2",
     "pretty-quick": "^4.0.0",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3",
     "wxt": "^0.20.0"
   }
